--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_fonts: ^6.1.0
   fl_chart: ^1.1.1
   lottie: ^3.0.0
+  flutter_slidable: ^3.0.1
   
   # Utilities
   intl: ^0.20.2
