--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
+    <!-- Required for haptic feedback -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    
     <application
         android:label="habit_hero"
         android:name="${applicationName}"
