--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,3 +57,12 @@ flutter:
     - assets/animations/
     - assets/icon/
     - assets/sounds/
+
+# App Icon Configuration
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"
+  adaptive_icon_background: "#6366F1"  # Indigo gradient color
+  remove_alpha_ios: true
