--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^1.0.7
   image: ^4.1.7
   share_plus: ^10.1.2
+  path_provider: ^2.1.1
   
   # Microinteractions
   vibration: ^2.0.0
