CI > Fix Flutter release channel

--- a/.github/workflows/release-build-test.yml
+++ b/.github/workflows/release-build-test.yml
@@ -24,7 +24,6 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
           channel: 'stable'
 
       - name: Get dependencies
@@ -97,7 +96,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: 'stable'
 
       - name: Get dependencies
         run: flutter pub get
